--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,11 @@ PINATA_GATEWAY=https://gateway.pinata.cloud/ipfs/
 ISSUER_WALLET_PRIVATE_KEY=0x...
 ALLOWED_ORIGIN=http://localhost:5173
 
+# Supabase Configuration
+SUPABASE_URL=https://your-project-id.supabase.co
+SUPABASE_ANON_KEY=your-anon-key-here
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
+
 # Frontend Configuration (copy to frontend/.env)
 VITE_API_BASE=http://localhost:4000
 VITE_CONTRACT_ADDRESS=
